--- a/src/Views/AlterarFuncionarioDados.form
+++ b/src/Views/AlterarFuncionarioDados.form
@@ -69,11 +69,9 @@
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Component id="optionFem" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                      <Component id="txtIdade" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="txtCPF" alignment="0" pref="150" max="32767" attributes="0"/>
-                                      <Component id="txtNome" alignment="0" max="32767" attributes="0"/>
-                                  </Group>
+                                  <Component id="txtIdade" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="txtCPF" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="txtNome" alignment="0" max="32767" attributes="0"/>
                                   <Component id="txtEmail" alignment="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
